--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "require": {
         "php": 				">=5.3.3",
     	"phpunit/phpunit": 		"3.*@stable",
-        "behat/behat": 			">=2.*@stable",
-	"behat/mink": 			">=1.*@stable"
+        "behat/behat": 			">=2.4@stable",
+	"behat/mink": 			">=1.4@stable"
     },
     "autoload": {
         "psr-0": {
