--- a/composer.json
+++ b/composer.json
@@ -13,22 +13,12 @@
         "php": 				">=5.3.3",
     	"phpunit/phpunit": 		"3.*@stable",
         "drupal/drupal-extension":	"*",
-        "behat/behat": 			">=2.*@stable",
-	"behat/mink": 			">=1.*@stable"
+        "behat/behat": 			">=2.4@stable",
+	"behat/mink": 			">=1.4@stable"
     },
     "autoload": {
         "psr-0": {
             "NT\\Drupal\\Testing\\PHPUnit": "src"
         }
-    },
-    "repositories": [
-	{
-	  "type": "vcs",
-	  "url": "git://git.drupal.org/project/drupalextension.git"
-	},
-	{
-	  "type": "pear",
-	  "url": "http://pear.drush.org"
-	}
-    ]
+    }
 } 
