--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
     "autoload": {
         "psr-0": {
             "NT\\Drupal\\Testing\\PHPUnit": "src"
-        }
+        },
+        "files": [
+            "src/NT/Drupal/Testing/PHPUnit/drupal_test_case.php"
+        ]
     }
 } 
