--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "autoload": {
         "psr-0": {
+	    "NT\\Drupal\\Testing\\Context": "src",
             "NT\\Drupal\\Testing\\PHPUnit": "src"
         },
         "classmap": [
