--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     	"phpunit/phpunit": 		">=3.7.1@stable",
         "behat/behat": 			">=2.4@stable",
 	"behat/mink": 			">=1.4@stable",
-        "behat/mink-extension": 	"*",
-        "NT/drupal-composer-include":	"*@dev"
+        "behat/mink-extension": 	"*"
     },
     "autoload": {
         "psr-0": {
